[package]
name = "swap"
version = "0.0.1"
description = "Swap SOL for KIN"
authors = ["Anatoli"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-program = "1.7.11"
arrayref = "0.3.6"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
serde = "1.0.130"
num_enum = "0.5.4"
num-traits = "0.2.14"

[dev-dependencies]
solana-program-test = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]

